@@ -5,12 +5,12 @@
 ---
 # The batch-identifier is written to /var/log/installer/oem-id.
 # This value is put into the text box as the **suggested**
-# OEM ID. If @@DATE@@ is included in the identifier, then
+# OEM ID. If ${DATE} is included in the identifier, then
 # that is replaced by the current date in yyyy-MM-dd (ISO) format.
 #
-# it is ok for the identifier to be empty.
+# It is ok for the identifier to be empty.
 #
 # The identifier is written to the file as UTF-8 (this will be no
 # different from ASCII, for most inputs) and followed by a newline.
 # If the identifier is empty, only a newline is written.
-batch-identifier: neon-@@DATE@@
+batch-identifier: neon-${DATE}
